[project]
name = "neo4j-projeto"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "neo4j (>=6.0.3,<7.0.0)"
]

[tool.poetry]
packages = [{include = "neo4j_projeto", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
